# gpttest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mltt/: __init__.py  debruijn.py  eq.py  eval.py  nat.py  typing.py
scripts/: check.sh
src/mltt/: __init__.py  _compat.py  ast.py  beta_reduce.py  debruijn.py  eq.py  eval.py  fin.py  list.py  nat.py  normalization.py  predicates.py  py.typed  typing.py  vec.py
src/mltt/common/: span.py
src/mltt/core/: __init__.py  ast.py  debruijn.py  ind.py  inductive_utils.py  normalization.py  pretty.py  typing.py  util.py  utli.py
src/mltt/elab/: README.md  apply.py  apply_matcher.py  arg_matcher.py  east.py  elab_apply.py  elab_helpers.py  elab_state.py  errors.py  etype.py  generalize.py  inductive.py  match.py  names.py  sast.py  sind.py  solver.py  state.py  term.py  types.py
src/mltt/inductive/: __init__.py  all.py  allvec.py  bool.py  eq.py  expr.py  fin.py  le.py  list.py  maybe.py  nat.py  rtc.py  sigma.py  sorted.py  top_bottom.py  tree.py  unit_empty.py  vec.py
src/mltt/kernel/: README.md  ast.py  debruijn.py  env.py  environment.py  ind.py  levels.py  prelude.py  pretty.py  tel.py  telescope.py
src/mltt/proofs/: __init__.py  add_comm.py
src/mltt/solver/: README.md  __init__.py  constraints.py  errors.py  levels.py  meta.py  solver.py  state.py
src/mltt/surface/: README.md  desugar.py  elab1.py  elab_state.py  etype.py  match.py  parse.py  prelude.py  resolve.py  sast.py  sind.py  syntax.py  to_elab.py
tests/: elab_helpers.py  test_debruijn.py  test_eq.py  test_eval.py  test_nat.py  test_typing.py
tests/mltt/: test_beta_reduce.py  test_debruijn.py  test_eq.py  test_eval.py  test_fin.py  test_indexed_elim.py  test_list.py  test_nat.py  test_nng.py  test_normalization.py  test_typing.py  test_vec.py
tests/mltt/core/: test_debruijn.py  test_ind.py  test_inductive_utils.py  test_levels.py  test_normalization.py  test_pretty.py  test_typing.py  test_universe_vars.py
tests/mltt/elab/: elab_helpers.py  test_arg_matcher.py  test_basics.py  test_holes.py  test_let_infer.py  test_named_args.py  test_partial.py  test_state.py  test_surface_elim.py  test_surface_inductive.py  test_universes.py  (+2 more)
(+46 files in other folders)
