[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltt"
version = "0.1.0"
description = "Miniature Martin-Löf type theory utilities"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.6",
    "pytest>=9.0.1",
    "black>=25.11.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = "\\.pyi?$"
extend-exclude = """(
    /\\.eggs
  | /\\.git
  | /\\.mypy_cache
  | /\\.ruff_cache
  | /\\.venv
  | /build
  | /dist
)"""

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mltt = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
files = ["src/mltt", "tests"]
show_error_codes = true
warn_unused_configs = true
strict_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
